--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ img {
   position: absolute;
   left: 0;
   bottom: -1px;
-  content: "";
+  content: '';
 
   display: block;
   width: 100%;
@@ -188,11 +188,8 @@ img {
   height: 600px;
   margin-left: auto;
   margin-right: auto;
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url("../images/overlay.jpg");
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url('../images/overlay.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -255,7 +252,7 @@ img {
 
   min-width: 528px;
   min-height: 581px;
-  padding: 15px;
+  padding: 40px;
 
   background-color: rgba(255, 255, 255, 1);
 }
@@ -282,6 +279,172 @@ img {
   background-color: #fff;
   color: #fff;
   cursor: pointer;
+}
+
+/* =============== MODAL FORM =============== */
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-form-capture {
+  margin-bottom: 12px;
+
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  text-align: center;
+
+  color: #212121;
+}
+
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 42px;
+  font-size: 12px;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--accent-color);
+}
+
+.modal-form-input-desc {
+  display: block;
+  margin-bottom: 4px;
+
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+
+  letter-spacing: 0.01em;
+
+  color: #757575;
+}
+
+.modal-form-field {
+  margin-bottom: 10px;
+}
+
+.modal-form-icon {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  display: flex;
+  width: 18px;
+  height: 18px;
+}
+
+.modal-form-input-wrapper {
+  position: relative;
+  display: block;
+}
+
+.modal-form-message {
+  width: 100%;
+  height: 120px;
+  margin-bottom: 20px;
+  resize: none;
+  outline: none;
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  font-size: 12px;
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-message:focus {
+  border-color: var(--accent-color);
+}
+
+.modal-form-message::placeholder {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0d.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-form-checkbox-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--grey-color);
+}
+
+.modal-form-checkbox:checked + .modal-form-own-checkbox {
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
+}
+
+.modal-form-checkbox:focus + .modal-form-own-checkbox {
+  border: 2px solid var(--accent-color);
+}
+
+.modal-form-checkbox:checked + .modal-form-own-checkbox .modal-form-own-checkbox-icon {
+  display: block;
+}
+
+.modal-form-own-checkbox {
+  border: 2px solid #212121;
+  border-radius: 2px;
+  padding: 1px;
+  cursor: pointer;
+  margin-right: 7px;
+}
+
+.modal-form-own-checkbox-icon {
+  display: none;
+}
+
+.modal-form-checkbox-terms {
+  color: var(--accent-color);
+}
+
+.modal-form-submit {
+  align-self: center;
+  color: #ffffff;
+  background-color: #2196f3;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  border-radius: 4px;
+  border: transparent;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  letter-spacing: 0.06em;
+
+  padding: 10px 32px;
+  min-width: 216px;
+}
+
+.modal-form-submit:focus {
+  background-color: #188ce8;
 }
 
 /* ======================= Features ======================= */
@@ -576,6 +739,7 @@ img {
   padding: 10px 32px;
   min-width: 216px;
 }
+
 .button-two {
   min-width: 23px;
   padding: 6px 22px;
@@ -709,3 +873,59 @@ img {
 .footer-social-list-icon {
   fill: var(--white-color);
 }
+
+.footer-subscription {
+  display: flex;
+  flex-direction: column;
+}
+
+.mail-subscription {
+  display: flex;
+}
+
+.user-email {
+  width: 358px;
+  height: 50px;
+  padding: 15px;
+  color: var(--white-color);
+  background-color: #2f303a;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  margin-right: 12px;
+}
+
+.user-email::placeholder {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.button-subscription {
+  color: #ffffff;
+  background-color: #2196f3;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  border-radius: 4px;
+  border: transparent;
+  letter-spacing: 0.06em;
+
+  padding: 10px 32px;
+  gap: 10px;
+
+  min-width: 200px;
+  height: 50px;
+}
+
+.button-subscription-icon {
+}
+
+top: 50%;
+left: 15px;
+transform: translateY(-50%);
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
