--- a/css/style.css
+++ b/css/style.css
@@ -905,6 +905,9 @@ img {
 }
 
 .button-subscription {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: #ffffff;
   background-color: #2196f3;
   font-family: inherit;
@@ -921,11 +924,3 @@ img {
   min-width: 200px;
   height: 50px;
 }
-
-.button-subscription-icon {
-}
-
-top: 50%;
-left: 15px;
-transform: translateY(-50%);
-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
