--- a/css/style.css
+++ b/css/style.css
@@ -279,6 +279,13 @@ img {
   background-color: #fff;
   color: #fff;
   cursor: pointer;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-icon:hover,
+.close-icon:focus {
+  fill: var(--accent-color);
 }
 
 /* =============== MODAL FORM =============== */
@@ -356,10 +363,14 @@ img {
   display: block;
 }
 
+.modal-form-text-field {
+  margin-bottom: 20px;
+}
+
 .modal-form-message {
+  display: block;
   width: 100%;
   height: 120px;
-  margin-bottom: 20px;
   resize: none;
   outline: none;
   padding: 12px 16px;
@@ -399,11 +410,11 @@ img {
 
 .modal-form-checkbox:checked + .modal-form-own-checkbox {
   background-color: var(--accent-color);
-  border-color: var(--accent-color);
+  border: transparent;
 }
 
 .modal-form-checkbox:focus + .modal-form-own-checkbox {
-  border: 2px solid var(--accent-color);
+  border-color: var(--accent-color);
 }
 
 .modal-form-checkbox:checked + .modal-form-own-checkbox .modal-form-own-checkbox-icon {
@@ -838,8 +849,16 @@ img {
 
 .footer-wrapper {
   display: flex;
-  column-gap: 70px;
   align-items: baseline;
+}
+
+.footer-address {
+  flex-grow: 1;
+  margin-right: 70px;
+}
+
+.footer-social-link {
+  margin-right: 93px;
 }
 
 .footer-action {
